--- a/public/activity.html
+++ b/public/activity.html
@@ -39,7 +39,7 @@
 					<i class="icon-arrow"></i>
 				</label>
 			</div>
-			<a class="gamble"></a>
+			<div class="gamble"></div>
 		</form>
 		<div class="ed hide" id="ed">
 			您已经抽过奖！<br/>
